Initial port to 1.20.4