@@ -1,12 +1,14 @@
 package xyz.trivaxy.datamancer.profile;
 
+import com.github.freva.asciitable.AsciiTable;
+import com.github.freva.asciitable.Column;
+
 import java.io.FileWriter;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class FunctionReport {
 
@@ -14,20 +16,29 @@ public class FunctionReport {
     public static final Path OUTPUT_PATH = Paths.get("datamancer", "function_report.txt");
 
     public FunctionReport(Collection<PerformanceEntry> entries) {
-        this.entries = entries.stream().sorted(Comparator.comparingDouble(PerformanceEntry::getAverageExecutionTime)).collect(Collectors.toList());
+        this.entries = entries.stream().toList();
+    }
+
+    public String constructTable() {
+        return AsciiTable.getTable(
+                AsciiTable.FANCY_ASCII,
+                entries,
+                Arrays.asList(
+                        new Column().header("Function").with(entry -> entry.getFunctionId().toString()),
+                        new Column().header("Mean").with(entry -> String.format("%.5f", entry.calculateMean())),
+                        new Column().header("SD").with(entry -> String.format("%.5f", entry.calculateStandardDeviation())),
+                        new Column().header("Min").with(entry -> String.format("%.5f", entry.findMin())),
+                        new Column().header("Max").with(entry -> String.format("%.5f", entry.findMax())),
+                        new Column().header("Iterations").with(entry -> String.valueOf(entry.getTotalExecutionCount()))
+                )
+        );
     }
 
     public void writeToFile() throws IOException {
         Files.createDirectories(OUTPUT_PATH.getParent());
 
-        Formatter formatter = new Formatter(new FileWriter(OUTPUT_PATH.toFile()));
-        formatter.format("%-30s %-6s %-13s\n", "Function", "iter", "time(μs)");
-
-        for (PerformanceEntry entry : entries) {
-            formatter.format("%-30s %-6d %-13f\n", entry.getFunction().getId(), entry.getTotalExecutionCount(), entry.getAverageExecutionTime());
+        try (FileWriter writer = new FileWriter(OUTPUT_PATH.toFile())) {
+            writer.write(constructTable());
         }
-
-        formatter.flush();
-        formatter.close();
     }
 }
